--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
+    "date-fns": "^4.1.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
